codex-rs/tui/src/snapshots/codex_tui__app__tests__agent_picker_followup_prompt.snap
---
source: tui/src/app/tests.rs
expression: rendered.clone()
---
▌ Follow up with agent
▌ Robie [explorer] · /root/worker
▌
▌ Write the next task for this agent

Press enter to confirm or esc to go back
