codex-rs/tui/src/snapshots/codex_tui__app__tests__agent_picker_followup_root_actions.snap
---
source: tui/src/app/tests.rs
expression: rendered.clone()
---
  Subagents
  Select a thread to watch. ⌥ + ← previous, ⌥ + → next.
  Agents: 1 total · 0 running · 0 waiting · 0 error · 0 closed

› 1. • Main [default] (current)       Status: closed
                                      Current view: yes
                                      Connection: connected to this thread
                                      Kind: main thread
                                      Inspect:
                                      - Thread: 00000000-0000-0000-0000-000000000111
                                      Actions:
                                      - Enter: stay on this thread
  2. • Robie [explorer]               idle · role explorer · /root/worker
  3. > Send message Robie [explorer]  idle · /root/worker · queue message only
  4. > Follow up Robie [explorer]     idle · /root/worker · starts a turn
  5. x Close Robie [explorer]         idle · /root/worker · close agent subtree
  6. r Retry Robie [explorer]         idle · /root/worker · spawn a fresh sibling
  7. - Dismiss Robie [explorer]       idle · /root/worker · hide from Agent Window only

  Press enter to confirm or esc to go back
