codex-rs/tui/src/snapshots/codex_tui__app__tests__agent_picker_message_child_context.snap
---
source: tui/src/app/tests.rs
expression: rendered.clone()
---
  Subagents
  Select a thread to watch. ⌥ + ← previous, ⌥ + → next.
  Agents: 2 total · 0 running · 0 waiting · 0 error · 0 closed

  1. • Main [default]              closed · main thread · 00000000
› 2. • Owner [planner] (current)   Status: idle
                                   Current view: yes
                                   Kind: sub-agent thread
                                   Inspect:
                                   - Nickname: Owner
                                   - Role: planner
                                   - Agent path: /root/owner
                                   - Thread: 00000000-0000-0000-0000-000000000212
                                   Actions:
                                   - Enter: watch this thread
  3. • Idle [worker]               idle · role worker · /root/owner/idle
  4. > Follow up Idle [worker]     idle · /root/owner/idle · starts a turn
  5. x Close Idle [worker]         idle · /root/owner/idle · close agent subtree
  6. > Send message Idle [worker]  idle · /root/owner/idle · queue message only

  Press enter to confirm or esc to go back
