codex-rs/tui/src/snapshots/codex_tui__app__tests__agent_picker_send_message_prompt.snap
---
source: tui/src/app/tests.rs
expression: rendered.clone()
---
▌ Message agent
▌ Robie [explorer] · /root/worker
▌
▌ Write a message for this agent

Press enter to confirm or esc to go back
