codex-rs/tui/src/snapshots/codex_tui__app__tests__agent_picker_workbench.snap
---
source: tui/src/app/tests.rs
expression: rendered.clone()
---
  Subagents
  Select a thread to watch. ⌥ + ← previous, ⌥ + → next.
  Agents: 1 total · 1 running · 0 waiting · 0 error · 0 closed

  1. • Main [default]              closed · main thread · 00000000
› 2. • Robie [explorer] (current)  Status: running
                                   Current view: yes
                                   Kind: sub-agent thread
                                   Inspect:
                                   - Nickname: Robie
                                   - Role: explorer
                                   - Agent path: /root/worker
                                   - Prompt: Inspect the parser state and report concise evidence.
                                   - Tokens: total 10 · last 10 · context 10/950,000
                                   - Plan: 1/3 complete · now: Verify workbench anchors
                                   - Thread: 00000000-0000-0000-0000-000000000102
                                   Context:
                                   - Initial request: Map parser entry points. Report evidence.
                                   - Latest input: Focus on app-server projection.
                                   Recent activity:
                                   - $ cargo test -p codex-tui agent_picker_workbench_snapshot
                                   - Checked selected detail activity.
                                   Actions:
                                   - Enter: watch this thread

  Press enter to confirm or esc to go back
